--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
     "@types/node": "^25.2.3",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
+  },
+  "dependencies": {
+    "@fontsource/inter": "^5.2.8",
+    "@fontsource/nunito": "^5.2.7",
+    "react": "^19.2.4"
   }
 }
