--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "type": "commonjs",
   "devDependencies": {
     "@radix-ui/react-checkbox": "^1.3.3",
-    "@radix-ui/react-select": "^1.3.4",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-select": "^2.1.4",
     "@types/node": "^25.2.3",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
